fix/TR-020: Preauthorize and fix api - Delete Test - Refactor BlacklistToken to Token (entity, repo, service) - DB_URL env - Update TokenUtil, AuditorAwareImpl, UserService, UserRepository, ErrorCode, Categorize, UserDto - Add AuditingEntityListener to entities - Update SecurityConfig, JwtDecoderConfig